--- a/src/app/pages/user-management/field-force/create/field-force-create.component.html
+++ b/src/app/pages/user-management/field-force/create/field-force-create.component.html
@@ -48,7 +48,8 @@
 
             <ng-template matStepLabel>Wilayah</ng-template>
 
-            <div fxFlex="1 0 auto" fxLayout="column">
+            belum selesai
+            <!-- <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
                 <mat-select placeholder="Wilayah" formControlName="level_desc" (selectionChange)="selectionChange($event)">
                   <mat-option *ngFor="let item of listLevel" [value]="item.level_desc">{{item.level_desc |
@@ -62,7 +63,7 @@
               <ng-container *ngIf="verticalStepperStep2.get('level_desc').value">
                 <dropdown-form [dataCb]="ObjectArea" [form]="verticalStepperStep2" (selectionChange)="onSelect($event)"></dropdown-form>
               </ng-container>
-            </div>
+            </div> -->
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
               <button mat-raised-button matStepperNext type="button" class="confirmation-button">
