--- a/src/app/pages/newsfeed-management/news/index/news-index.component.html
+++ b/src/app/pages/newsfeed-management/news/index/news-index.component.html
@@ -24,8 +24,8 @@
         </div>
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" class="top-table p-8">
           <mat-form-field fxFlex="40" floatLabel="never" class="orders datepicker is-light">
-            <input matInput #from [matDatepicker]="dari" placeholder="Dari Tanggal" formControlName="start_date"
-              (dateChange)="setMinDate(formFilter.get('start_date').value)" readonly>
+            <input matInput #from [matDatepicker]="dari" (focus)="dari.open()" placeholder="Dari Tanggal"
+              formControlName="start_date" (dateChange)="setMinDate(formFilter.get('start_date').value)" readonly>
             <button mat-button *ngIf="formFilter.get('start_date').value" matSuffix mat-icon-button aria-label="Clear"
               (click)="formFilter.get('start_date').setValue('')">
               <mat-icon>close</mat-icon>
@@ -36,8 +36,8 @@
             <mat-datepicker #dari></mat-datepicker>
           </mat-form-field>
           <mat-form-field fxFlex="40" floatLabel="never" class="orders datepicker is-light">
-            <input matInput [matDatepicker]="sampai" [min]="minDate" placeholder="Sampai Tanggal" formControlName="end_date"
-              readonly>
+            <input matInput [matDatepicker]="sampai" (focus)="sampai.open()" [min]="minDate" placeholder="Sampai Tanggal"
+              formControlName="end_date" readonly>
             <button mat-button *ngIf="formFilter.get('end_date').value" matSuffix mat-icon-button aria-label="Clear"
               (click)="formFilter.get('end_date').setValue('')">
               <mat-icon>close</mat-icon>
