--- a/src/app/pages/dte/trade/create/trade-create.component.html
+++ b/src/app/pages/dte/trade/create/trade-create.component.html
@@ -22,8 +22,8 @@
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
 
             <mat-form-field fxFlex="50%" class="is-light form-primary">
-              <input matInput formControlName="start_date" [matDatepicker]="startDate" placeholder="Tanggal Mulai"
-                (dateChange)="setMinEndDate()">
+              <input matInput formControlName="start_date" (focus)="startDate.open()" [matDatepicker]="startDate"
+                placeholder="Tanggal Mulai" (dateChange)="setMinEndDate()">
               <mat-datepicker-toggle matSuffix [for]="startDate">
                 <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
               </mat-datepicker-toggle>
@@ -34,8 +34,8 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="50%" class="is-light form-primary">
-              <input matInput formControlName="end_date" [matDatepicker]="endDate" placeholder="Tanggal Berakhir" [min]="minDate"
-                (dateChange)="setMinExpireDate()">
+              <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate" placeholder="Tanggal Berakhir"
+                [min]="minDate" (dateChange)="setMinExpireDate()">
               <mat-datepicker-toggle matSuffix [for]="endDate">
                 <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
               </mat-datepicker-toggle>
@@ -56,7 +56,7 @@
           </div>
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="47%" class="is-light form-primary">
-              <input matInput formControlName="coin_expiry_date" [matDatepicker]="dp" placeholder="Tanggal Kadaluarsa Coin Trade Program"
+              <input matInput formControlName="coin_expiry_date" [matDatepicker]="dp" (focus)="dp.open()" placeholder="Tanggal Kadaluarsa Coin Trade Program"
                 [min]="minExpireDate">
               <mat-datepicker-toggle matSuffix [for]="dp">
                 <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
