--- a/src/global.scss
+++ b/src/global.scss
@@ -825,6 +825,41 @@ a {
   border-top: 1px solid #ccc !important;
 }
 
+.fr-toolbar .fr-command.fr-btn,
+.fr-popup .fr-command.fr-btn {
+  background: 0 0;
+  color: #222;
+  -moz-outline: 0;
+  outline: 0;
+  border: 0;
+  line-height: 1;
+  cursor: pointer;
+  text-align: left;
+  margin: 0 2px;
+  -webkit-transition: background .2s ease 0s;
+  -moz-transition: background .2s ease 0s;
+  -ms-transition: background .2s ease 0s;
+  -o-transition: background .2s ease 0s;
+  border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  background-clip: padding-box;
+  z-index: 2;
+  position: relative;
+  box-sizing: border-box;
+  text-decoration: none;
+  user-select: none;
+  -o-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  float: left;
+  padding: 0;
+  width: auto !important;
+  height: 38px;
+}
+
 /**
   color
 */
