--- a/src/app/pages/sku-management/product/index/product-index.component.html
+++ b/src/app/pages/sku-management/product/index/product-index.component.html
@@ -24,7 +24,7 @@
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
-            <input matInput placeholder="Cari" (keyup)="keyUp.next($event)" autocomplete="off">
+            <input matInput placeholder="Cari" (keyup)="keyUp.($event.target.value)" autocomplete="off">
           </mat-form-field>
         </div>
       </div>
