--- a/src/app/pages/user-management/retailer/create/retailer-create.component.html
+++ b/src/app/pages/user-management/retailer/create/retailer-create.component.html
@@ -1,3 +1,144 @@
-<p>
-  retailer-create works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+    <!-- HEADER -->
+    <page-content-header [contentTitle]="'Buat Retailer'">
+    </page-content-header>
+    <!-- / HEADER -->
+    <div class="content p-24">
+      <div class="vertical-stepper-wrapper is-thirdquart is-half">
+  
+        <!-- VERTICAL STEPPER EXAMPLE -->
+        <mat-vertical-stepper class="mat-elevation-z4" [linear]="true">
+  
+          <mat-step [stepControl]="verticalStepperStep1">
+  
+            <form [formGroup]="verticalStepperStep1">
+  
+              <ng-template matStepLabel>Informasi Toko</ng-template>
+  
+              <div fxFlex="1 0 auto" fxLayout="column">
+  
+                <mat-form-field fxFlex="100" class="is-light">
+                  <input matInput type="text" placeholder="Nama" formControlName="name">
+                  <mat-error *ngIf="verticalStepperStep1.controls['name'].hasError('required') && verticalStepperStep1.controls['name'].touched ">
+                    Nama Toko harus diisi.
+                  </mat-error>
+                </mat-form-field>
+  
+                <mat-form-field fxFlex="100" class="is-light">
+                  <input matInput type="text" placeholder="Alamat Toko" formControlName="address">
+                  <mat-error *ngIf="verticalStepperStep1.controls['address'].hasError('required') && verticalStepperStep1.controls['address'].touched ">
+                    Alamat Toko harus diisi.
+                  </mat-error>
+                </mat-form-field>
+  
+                <mat-form-field fxFlex="100" class="is-light">
+                  <input matInput type="text" placeholder="Kode iSMS" formControlName="business_code">
+                  <mat-error *ngIf="verticalStepperStep1.controls['business_code'].hasError('required') && verticalStepperStep1.controls['business_code'].touched ">
+                    Kode iSMS harus diisi.
+                  </mat-error>
+                </mat-form-field>
+              </div>
+  
+              <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
+                <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+                  Lanjut
+                </button>
+              </div>
+  
+            </form>
+  
+          </mat-step>
+  
+          <mat-step [stepControl]="verticalStepperStep2">
+  
+            <form [formGroup]="verticalStepperStep2">
+  
+              <ng-template matStepLabel>Data Pemilik</ng-template>
+  
+              <div fxFlex="1 0 auto" fxLayout="column">
+  
+                <mat-form-field fxFlex="100" class="is-light">
+                  <input matInput type="text" placeholder="Nama Pemilik" formControlName="owner">
+                  <mat-error *ngIf="verticalStepperStep2.controls['owner'].hasError('required') && verticalStepperStep2.controls['owner'].touched ">
+                    Nama Pemilik harus diisi.
+                  </mat-error>
+                </mat-form-field>
+  
+                <mat-form-field fxFlex="100" class="is-light">
+                  <input matInput fxFlex="7" fxFlex.xs="20" value="+62" readonly>
+                  <input matInput fxFlex="93" fxFlex.xs="80" type="tel" placeholder="No. HP" formControlName="phone">
+                  <mat-error *ngIf="verticalStepperStep2.controls['phone'].hasError('required') && verticalStepperStep2.controls['phone'].touched ">
+                    No. HP harus diisi.
+                  </mat-error>
+                </mat-form-field>
+  
+              </div>
+  
+              <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
+                <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+                  Lanjut
+                </button>
+              </div>
+  
+            </form>
+  
+          </mat-step>
+  
+          <mat-step [stepControl]="verticalStepperStep3">
+  
+            <form [formGroup]="verticalStepperStep3">
+  
+              <ng-template matStepLabel>Area</ng-template>
+  
+              <div fxFlex="1 0 auto" fxLayout="column">
+  
+                <mat-form-field fxFlex="100" class="is-light">
+                  <input matInput type="text" placeholder="Area" formControlName="area">
+                  <mat-error *ngIf="verticalStepperStep3.controls['area'].hasError('required') && verticalStepperStep3.controls['area'].touched ">
+                    Area harus diisi.
+                  </mat-error>
+                </mat-form-field>
+  
+              </div>
+  
+              <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
+                <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+                  Lanjut
+                </button>
+              </div>
+  
+            </form>
+  
+          </mat-step>
+  
+          <mat-step>
+  
+            <ng-template matStepLabel>Selesai</ng-template>
+  
+            <div class="h2" fxLayout="row" fxLayoutAlign="center center">
+              Apakah anda yakin untuk menyelesaikan isian ini ?
+            </div>
+  
+            <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
+              <button class="mr-8" mat-stroked-button matStepperPrevious type="button" color="accent">
+                Kembali
+              </button>
+              <button mat-raised-button type="button" class="confirmation-button" (click)="submit()">
+                <ng-container *ngIf="submitting == false">
+                  Selesai
+                </ng-container>
+                <ng-container *ngIf="submitting == true">
+                  <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;"></mat-progress-spinner>
+                </ng-container>
+              </button>
+            </div>
+  
+          </mat-step>
+  
+        </mat-vertical-stepper>
+        <!-- / VERTICAL STEPPER EXAMPLE -->
+  
+      </div>
+    </div>
+  </div>
+  
